<resources>
    <string name="app_name">Soul Music</string>
    <string name="txt_hint_password">Mật khẩu (tối thiểu 6 ký tự)</string>
    <string name="txt_et_username">Tên đăng nhập</string>
    <string name="txt_mt_btn_register">Đăng ký</string>
    <string name="txt_mt_btn_login">Đăng nhập</string>
    <string name="txt_tv_forget_password">Quên mật khẩu?</string>
    <string name="txt_tv_password">Mật khẩu</string>
    <string name="txt_tv_username">Tên đăng nhập</string>
    <string name="txt_mt_btn_login_with_google">Tiếp tục với Google</string>
    <string name="txt_iv_content_description">TODO</string>
    <string name="txt_tv_already_have_an_account">Đăng nhập ngay</string>
    <string name="txt_email">Email của bạn</string>
    <string name="txt_tv_repassword">Xác nhận mật khẩu</string>
    <string name="txt_tv_email">Email</string>
    <string name="txt_et_repassword">Xác nhận mật khẩu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_btn_re_password_by_email">Lấy lại mật khẩu</string>
    <string name="txt_tv_check_your_email">Kiểm tra email của bạn!</string>

    <!-- strings for bottom navigation -->
    <string name="txt_home">Home</string>
    <string name="txt_playlist">Playlist</string>
    <string name="txt_rank">Rank</string>
    <string name="txt_user">User</string>
    <string name="txt_love">Love</string>
</resources>