<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="160dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/txt_iv_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/txt_tv_username"
        android:textColor="#20D062"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_register_username"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_register_username" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/txt_tv_email"
        android:textColor="#20D062"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_register_email"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_register_email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/txt_tv_password"
        android:textColor="#20D062"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_register_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_register_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/txt_tv_repassword"
        android:textColor="#20D062"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_register_re_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_register_re_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mt_btn_confirm_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:width="340dp"
        android:height="44dp"
        android:backgroundTint="@color/very_light_green"
        android:enabled="false"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/txt_mt_btn_register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_register_process"
        app:strokeColor="@color/medium_green"
        app:strokeWidth="1dp" />

    <EditText

        android:id="@+id/et_register_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/txt_email"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_username"
        tools:ignore="DuplicateSpeakableTextCheck,TextFields" />

    <EditText

        android:id="@+id/et_register_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/txt_hint_password"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_email"
        tools:ignore="DuplicateSpeakableTextCheck,TextFields" />

    <EditText

        android:id="@+id/et_register_re_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/txt_et_repassword"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_password"
        tools:ignore="DuplicateSpeakableTextCheck,TextFields" />

    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/txt_et_username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#747474"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/txt_tv_already_have_an_account"
        android:textColor="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mt_btn_confirm_register" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ProgressBar
        android:id="@+id/pb_register_process"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/medium_green"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_re_password" />


</androidx.constraintlayout.widget.ConstraintLayout>