<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".view.fragments.auth.SignInFragment">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/mt_btn_login_with_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:width="340dp"
            android:height="44dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_mt_btn_login_with_google"
            android:textColor="@color/white"
            app:cornerRadius="5dp"
            app:iconTint="#6A3D3D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:strokeColor="#808080"
            app:strokeWidth="2dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="185dp"
            android:layout_height="160dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/txt_iv_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_tv_email"
            android:textColor="#20D062"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_login_email"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_login_email" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_tv_password"
            android:textColor="#20D062"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_login_password"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_login_password" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_tv_forget_password"
            android:textColor="@color/medium_green"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/et_login_password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mt_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:width="340dp"
            android:height="44dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_mt_btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pb_login_process"
            app:strokeColor="#808080"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mt_btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:width="340dp"
            android:height="44dp"
            android:backgroundTint="@color/medium_green"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_mt_btn_register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mt_btn_login"
            app:strokeColor="@color/medium_green"
            app:strokeWidth="1dp" />

        <EditText

            android:id="@+id/et_login_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/txt_hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#808080"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_email"
            tools:ignore="DuplicateSpeakableTextCheck,TextFields" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="#747474"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/txt_iv_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mt_btn_register"
            app:srcCompat="@drawable/img_login_option" />

        <ProgressBar
            android:id="@+id/pb_login_process"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/medium_green"
            android:visibility="invisible"
            android:indeterminateDuration="5000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_google_24"
            app:layout_constraintBottom_toBottomOf="@+id/mt_btn_login_with_google"
            app:layout_constraintStart_toStartOf="@+id/mt_btn_login_with_google"
            app:layout_constraintTop_toTopOf="@+id/mt_btn_login_with_google" />

        <ImageView
            android:id="@+id/iv_show_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_show_pwd_24"
            app:layout_constraintBottom_toBottomOf="@+id/et_login_password"
            app:layout_constraintEnd_toEndOf="@+id/et_login_password"
            app:layout_constraintTop_toTopOf="@+id/et_login_password"
            app:srcCompat="@drawable/ic_show_pwd_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>