<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".view.fragments.auth.ResetPasswordFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_tv_email"
            android:textColor="#20D062"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_re_password_email"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_re_password_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mt_btn_re_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:width="340dp"
            android:height="44dp"
            android:backgroundTint="@color/medium_green"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_btn_re_password_by_email"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pb_re_password_process"
            app:strokeColor="@color/medium_green"
            app:strokeWidth="1dp" />

        <EditText
            android:id="@+id/et_re_password_email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:hint="@string/txt_email"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="#747474"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/inter_medium"
            android:text="Sử dụng emai bạn đã đăng ký để lấy lại mật khẩu"
            android:textAlignment="center"
            android:textColor="@color/medium_green"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/ic_back_to_login_24"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_mt_btn_login"
            android:textColor="@color/medium_green"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_check_your_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/txt_tv_check_your_email"
            android:textAlignment="center"
            android:textColor="@color/medium_green"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_re_password_email" />

        <ProgressBar
            android:id="@+id/pb_re_password_process"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/medium_green"
            android:visibility="invisible"
            android:indeterminateDuration="5000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_check_your_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>